--- a/style.css
+++ b/style.css
@@ -30,14 +30,19 @@ body{ font-family: open-sans;
             padding: 0 15px;
         }
         
+        .overlay{ position: fixed; left: 0; right: 0; top: 0; bottom: 0; background: rgba(0, 0, 0, 0.7); z-index: 100;}
+        .popover .cross{ position: absolute; right: 10px; top: 10px; border: none; background: transparent; }
+        .popover label{ display: block; margin-bottom: 10px;}
+
   .model{ background: rgba(51, 51, 51, 0.8); position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 100; }
   .popover{ position: fixed; left: 50%; padding: 20px; background: #fff; top: 100px; z-index: 101; transform: translateX(-50%)}
   .popover label{ display: block; margin-bottom: 10px; }
-  .popover button{ margin: 0; }
-  .popover button[type="button"]{ position: absolute; right: 5px; top: 5px; }
+  .popover .cross{ position: absolute; right: 10px; top: 10px; border: none; background: transparent; }
 
   .signInform{display: none;}
   .signUpform{display: none;}
+  .plan{display: none;}
+
 
   /* 12 Grids  */
         .row{
@@ -110,7 +115,8 @@ body{ font-family: open-sans;
 
     nav ul li{ margin-right: 10px;  }
     nav ul li a{ color: white; display: block; padding: 8px 12px; border-bottom: 2px solid transparent; }
-    nav ul li a.active{ border-bottom-color: #fff;}
+    nav ul li a.active{ border-bottom-color: #fff; color: lightcoral;}
+    nav ul li a:hover{background-color: darkolivegreen;}
     .wrap-1 header{background-color: rgba(202, 60, 60,0.7); position: fixed; top: 0px; left: 0; right: 0; z-index: 100;}
     .wrap-1 header nav{ margin: 20px 15px;}
     .wrap-1 header .nav{ margin: 30px 20px; margin-left: 0;}
@@ -211,10 +217,28 @@ body{ font-family: open-sans;
 .wrap-7 .col-5 label input{height: 40px; width: 230px; border: none;}
 .wrap-7 .col-5 label button{ height: 40px; width: 150px; background: #fa7c30; color: #fff; border: none;}
 .wrap-7 .col-4 h3{ margin: 90px 0 40px 15px;}
-.wrap-7 .col-4 .row .col-5{ margin-bottom:33px;}
+.wrap-7 .col-4 .row .col-5{ margin-bottom:33px; overflow: hidden;}
+.wrap-7 .col-4 .row .col-5 img{transition: 0.5s;}
+.wrap-7 .col-4 .row .col-5 img:hover{
+    transform: scale(1.2);
+    transition: 500 ease-in-out;
+    border-top-left-radius: .75rem;
+    border-top-right-radius: .75rem;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);}
+
 .wrap-7 .col-4 .row .col-7 p{ padding: 5px 5px 3px -5px; font-size: 14px; line-height: 22px;}
 .wrap-7 .col-3 h3{ margin: 90px 0 40px 15px ;}
-.wrap-7 .col-3 .row .col-4 img{ width: 100%; height: auto;}
+
+.wrap-7 .col-3 .row .col-4 {overflow: hidden;}
+.wrap-7 .col-3 .row .col-4 img{ width: 100%; height: auto;transition: 0.5s; }
+.wrap-7 .col-3 .row .col-4 img:hover
+{
+    transform: scale(1.2);
+    transition: 500 ease-in-out;
+    border-top-left-radius: .75rem;
+    border-top-right-radius: .75rem;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);}
+
 .wrap-7 footer p{text-align: center; color: #fa7c30; padding: 40px 0 20px;font-size: 14px; line-height: 30px;}
 
 .top{ position: fixed; right: 5px; bottom: 5px;}
