--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ button{ padding: 0; cursor: pointer;}
 img{ max-width: 100%; height: auto; vertical-align: bottom;}
 iframe{ border: none;}
 
+
 @font-face {
     font-family: open-sans;
     font-weight: 400;
@@ -46,40 +47,67 @@ body{ font-family: open-sans;
   .signUpform{display: none;}
   .plan{display: none;}
 
+
   /* 12 Grids  */
         .row{
             display: flex;
             flex-flow: row wrap;
-            margin: 0 -15px;}
+            margin: 0 -15px;
+        }
         
         .row [class^="col"]{
             flex: 1 0 auto;
-            padding: 0 7px;}
+            padding: 0 7px;
+         }
         
         .row .col-1{
-            flex-basis: 8.33%; max-width: 8.33%;}
+            flex-basis: 8.33%;
+            max-width: 8.33%;
+        }
         .row .col-2{
-            flex-basis: 16.66%; max-width: 16.66%;}
+            flex-basis: 16.66%;
+            max-width: 16.66%;
+        }
         .row .col-3{
-            flex-basis: 25%; max-width: 25%;}
+            flex-basis: 25%;
+            max-width: 25%;
+        }
         .row .col-4{
-            flex-basis: 33.33%; max-width: 33.33%;}
+            flex-basis: 33.33%;
+            max-width: 33.33%;
+        }
         .row .col-5{
-            flex-basis: 41.66%; max-width: 41.66%;}
+            flex-basis: 41.66%;
+            max-width: 41.66%;
+        }
         .row .col-6{
-            flex-basis: 50%; max-width: 50%;}
+            flex-basis: 50%;
+            max-width: 50%;
+        }
         .row .col-7{
-            flex-basis: 58.33%; max-width: 58.33%;}
+            flex-basis: 58.33%;
+            max-width: 58.33%;
+        }
         .row .col-8{
-            flex-basis: 66.66%; max-width: 66.66%;}
+            flex-basis: 66.66%;
+            max-width: 66.66%;
+        }
         .row .col-9{
-            flex-basis: 75%; max-width: 75%;}
+            flex-basis: 75%;
+            max-width: 75%;
+        }
         .row .col-10{
-            flex-basis: 83.33%; max-width: 83.33%;}
+            flex-basis: 83.33%;
+            max-width: 83.33%;
+        }
         .row .col-11{
-            flex-basis: 91.66%; max-width: 91.66%;}
+            flex-basis: 91.66%;
+            max-width: 91.66%;
+        }
         .row .col-12{
-            flex-basis: 100%; max-width: 100%;}
+            flex-basis: 100%;
+            max-width: 100%;
+        }
     
     .flex{ display: flex; justify-content: space-between;}
     .align-center{ align-items: center;}
@@ -91,13 +119,14 @@ body{ font-family: open-sans;
 
     nav ul li{ margin-right: 10px;  }
     nav ul li a{ color: white; display: block; padding: 8px 12px; border-bottom: 2px solid transparent; }
-    nav ul li a.active{ border-bottom-color: #fff; color: lightcoral;}
+    nav ul li a.active{ border-bottom-color: #fff; color: rgb(60, 15, 15);}
     nav ul li a:hover{background-color: #fa7c30;}
   
     .wrap-1 header{background-color: rgba(202, 60, 60,0.7); position: fixed; top: 0px; left: 0; right: 0; z-index: 100;}
     .wrap-1 header nav{ margin: 20px 15px;}
     .wrap-1 header .nav{ margin: 30px 20px; margin-left: 0;}
-   
+    
+
     .btn{width: auto;
         height: 30px;
         background: #fa7c30;
@@ -252,6 +281,7 @@ animation: ripple 1.6s ease-out infinite;
 opacity: 1;
 background: #2c62de;
 }
+
 @keyframes ripple{0%{transform:scale(0);opacity:1}100%{transform:scale(1.5);opacity:0}};
 
 @media screen  and (max-width:1220px){       
@@ -259,21 +289,21 @@ background: #2c62de;
 }
 
 @media screen  and (max-width:980px){   
- h2{ font-size: 62px;}
- h3{ font-size: 56px;}
+     h2{ font-size: 62px;}
+     h3{ font-size: 56px;}
 
- .collapse1{ display: none; position: absolute; top: 62px; left: 0; right: 0; background: transparent; text-align: right; padding-bottom: 0px !important; }
+     .collapse1{ display: none; position: absolute; top: 62px; left: 0; right: 0; background: transparent; text-align: right; padding-bottom: 0px !important; }
 
- .mob1{ display: block;}
- .mob1 nav .btn{display: block; flex-direction: column;}
- .mob1 nav .btn { line-height: 20px; border: 1px solid #fff;}
+     .mob1{ display: block;}
+     .mob1 nav .btn{display: block; flex-direction: column;}
+     .mob1 nav .btn { line-height: 20px; border: 1px solid #fff;}
 
- .row .col-t-4{flex-basis: 33.33%; max-width: 33.33%;}
- .row .col-t-6{flex-basis: 50%;max-width: 50%;}
- .row .col-t-12{flex-basis: 100%;max-width: 100%;}
- .row .col-t-hide{ display: none; }
- .row .col-t-auto{ flex-basis: 20%; max-width: 20%;}
- .box{ line-height: 50px;}
+     .row .col-t-4{flex-basis: 33.33%; max-width: 33.33%;}
+    .row .col-t-6{flex-basis: 50%;max-width: 50%;}
+    .row .col-t-12{flex-basis: 100%;max-width: 100%;}
+    .row .col-t-hide{ display: none; }
+    .row .col-t-auto{ flex-basis: 20%; max-width: 20%;}
+    .box{ line-height: 50px;}
 }
 
 @media screen  and (max-width:767px){       
@@ -308,6 +338,8 @@ background: #2c62de;
     .wrap-1 .col-7 h3.bold{ font-size: 48px; color: #fa7c30;}
 
     .wrap-4{ background: url(../img/bg-21.jpg) no-repeat center center/cover;}
+    
+    .wrap-6{ background: url(../img/bg-31.jpg) no-repeat center center/cover;}
     
     .wrap-7 .col-5 label input{width: 100%;}
     .wrap-7 .col-5 label button{width: 100%; align-items: center;}
